reset overrides and add comments for variables

--- a/src/blogs/6/index.mdx
+++ b/src/blogs/6/index.mdx
@@ -90,6 +90,8 @@ Key differences is the 404.html page no longer matters.
 
 We use two S3 buckets to accomplish static website hosting.
 
+TODO - Add S3 terraform discussion
+
 <br/>
 
 First www.arthurneedsadomain.com
@@ -124,7 +126,7 @@ React (really Webpack) ultimately "compiles" the JavaScript you write into a bun
 
 Setting up GitHub actions
 
-
+TODO - Add pipeline discussion
 
 
 <br/>
