broke out terraform and switched to cards for posts

--- a/src/blogs/6/index.mdx
+++ b/src/blogs/6/index.mdx
@@ -75,7 +75,13 @@ I have a hosted zone in Route53 that ties it all together.  Most important thing
 <br/>
 <br/>
 
+#### Buckets
 
+#### Pipeline
+
+#### Diagram
+
+#### Comments mechanism - preview
 ---
 
 #### Building Blog Site with Github actions
