add docker compose file for easy dev add mutation for approving comment add checkbox to form

--- a/ui/src/blogs/6/index.mdx
+++ b/ui/src/blogs/6/index.mdx
@@ -24,9 +24,11 @@ export const prodBuild = "https://create-react-app.dev/docs/production-build"
 
 export const gaTerraform = "https://github.com/hashicorp/setup-terraform"
 
-#### Using GitHub Actions to continuously deploy a Serverless blog site
+#### Deploying an application is beautifully "simple" using the tools available
 
-In this post I am going to cover how to use GitHub Actions to continuously build and deploy a serverless blog site using Terraform, React, GraphQL, and several AWS services including Lambda, API Gateway, S3, SNS, Route53, Certificate Manager and CloudFront.
+Let's imagine a "simple" application that deploys a personal blog site (this site ::smiley ) on AWS using a serverless approach
+
+Using GitHub Actions to continuously build and deploy a serverless blog site using Terraform, React, GraphQL, and several AWS services including Lambda, API Gateway, S3, SNS, Route53, Certificate Manager and CloudFront it is relatively "simple" for one person to build an end to end globally deployed, highly scalable web application.
 
 <br/>
 
